Scrollbar fix

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -130,7 +130,7 @@ header {
 }
 .calendar::-webkit-scrollbar {
     width: 3px;
-    background-color: red;
+    background-color: transparent;
 }
 .calendar::-webkit-scrollbar-thumb {
     background: var(--bg-light) !important;
